--- a/website/spreadmarket/index.html
+++ b/website/spreadmarket/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      // TODO figure out what package requires this dumb hack
+      window.process = { browser: true, env: { ENVIRONMENT: 'BROWSER' } };
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
